ignore js files

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /public/system
 /app/assets/stylesheets/material-icons.css
 /app/assets/stylesheets/materialize.css
+/app/assets/javascripts/materialize.js
