--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 !/log/.keep
 /tmp
 /public/system
+public/assets
 /app/assets/stylesheets/material-icons.css
 liveapp/app/assets/stylesheets/materialize.css
 /app/assets/javascripts/materialize.js
