--- a/config/database.yml
+++ b/config/database.yml
@@ -51,7 +51,9 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: liveapp_production
+  adapter: postgresql
+  encoding: unicode
+  database: liveapp_development
+  pool: 5
   username: liveapp
   password: <%= ENV['LIVEAPP_DATABASE_PASSWORD'] %>
