--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ public/assets
 /app/assets/stylesheets/material-icons.css
 liveapp/app/assets/stylesheets/materialize.css
 #/app/assets/javascripts/materialize.js
+/shared
