--- a/test/fixtures/partners.yml
+++ b/test/fixtures/partners.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: 1
-  user_id: 
+  profile_id: 
 
 two:
-  type: 1
-  user_id: 
+  profile_id: 
